# rusty_project

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  general.yml
src/: lib.rs  main.rs
tests/: health_check.rs
