[package]
name = "rusty_project"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "rusty_project"

[dependencies]
actix-web = "4.2.1"
tokio = {version = "1.8.4", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11.12"